--- a/IP/Program 2/styles.css
+++ b/IP/Program 2/styles.css
@@ -22,8 +22,8 @@ h2 {
   margin-bottom: 20px;
 }
 
-input[type="text"] {
-  width: 100%;
+input[type="text"], input[type="number"] {
+  width: 90%;
   padding: 10px;
   border: none;
   border-bottom: 1px solid #ccc;
@@ -40,8 +40,10 @@ label {
   transform-origin: top left;
 }
 
-input[type="text"]:focus ~ label,
-input[type="text"]:not(:placeholder-shown) label {
+input[type="number"]:focus~label,
+input[type="number"]:valid~label,
+input[type="text"]:focus~label,
+input[type="text"]:valid~label {
   transform: translateY(-50%);
   font-size: 12px;
   color: #4caf50;
